tests/fixtures/invalid/bytes_floordiv_str.py
# Cannot floor divide Bytes and Str
x: bytes = b"hello" // "hello"
